# gptcli

./: LICENSE  README.md  pyproject.toml
gptcli/: __main__.py  main.py
pygptcli/: __main__.py  main.py
