[tool.poetry]
name = "openapicli"
version = "0.1.0"
description = "GPT3 CLI tool"
authors = ["yoyo <hvuhsg5@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
