[tool.poetry]
name = "pygptcli"
version = "0.1.3"
description = "GPT3 CLI tool"
authors = ["yoyo <hvuhsg5@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
openai = "^0.27.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
